Functions 3,11,14 completed